--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,10 +1,9 @@
 <div id="auth-widget"></div>
 
+<script async src="https://{{reach5Domain}}/js/v1/identity.js"></script>
+
 <script>
-    (function(i,s,o,g,r,a,m){i['ReachFiveObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://{{reach5Domain}}/js/v1/identity.js','reach5');
+    window.reach5=window.reach5||function(){(reach5.q=reach5.q||[]).push(arguments)};
 
     reach5('showAuth', {
         container: 'auth-widget',
