Update with more widget

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,10 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script async src="https://{{reach5Domain}}/js/v1/en/identity.js"></script>
+    <script>
+        window.reach5=window.reach5||function(){(reach5.q=reach5.q||[]).push(arguments)};
+    </script>
   </head>
   <body>
     {{{body}}}
