--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,8 +1,8 @@
 <p>
-    Connected as {{name}}
+    Connected as {{name}} - <a href="/logout">Logout</a>
 </p>
 <p>
-    <a href="/logout">
-        Logout
-    </a>
+  <a href="/profile">
+      Profile
+  </a>
 </p>
