--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -1,8 +1,8 @@
-<div id="auth-widget"></div>
+<div id="auth-container"></div>
 
 <script>
     reach5('showAuth', {
-        container: 'auth-widget',
+        container: 'auth-container',
         auth: {
             redirectUri: '{{redirectUri}}'
         }
