--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,13 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<a href="/login">Login</a>
+<h2>Full Authentication</h2>
+
+<p><a href="/auth">Auth</a></p>
+<p><a href="/passwordless">Passwordless</a></p>
+
+<h2>Social Login</h2>
+
+<p><a href="/social-login">Social Login</a></p>
+
+<p><a href="/social-login-core">Social Login Core</a></p>
