--- a/views/user.hbs
+++ b/views/user.hbs
@@ -3,6 +3,16 @@
 </p>
 <p>
   <a href="/profile">
-      Profile
+      Profile Editor
+  </a>
+</p>
+<p>
+  <a href="/email-editor">
+      Email Editor
+  </a>
+</p>
+<p>
+  <a href="/password-editor">
+      Password Editor
   </a>
 </p>
