--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -9,12 +9,11 @@
 </p>
 
 <script>
-  reach5('showProfileEditor', {
-    container: 'profile-editor',
-    fields: [
-      "given_name",
-      "family_name",
-      "email"
-    ]
-  });
+    reach5('showProfileEditor', {
+        container: 'profile-editor',
+            fields: [
+                "given_name",
+                "family_name"
+            ]
+    });
 </script>
