Add loginWithPassword example

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,19 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<h2>Full Authentication</h2>
+<h2>Authentication</h2>
 
+<h3>Widget</h3>
 <p><a href="/auth">Auth</a></p>
 <p><a href="/passwordless">Passwordless</a></p>
 
-<h2>Social Login</h2>
+<h3>Core</h3>
+<p><a href="/login-with-password-core">Login with Password</a></p>
 
+<h2>Social Login Only</h2>
+
+<h3>Widget</h3>
 <p><a href="/social-login">Social Login</a></p>
 
+<h3>Core</h3>
 <p><a href="/social-login-core">Social Login Core</a></p>
