--- a/views/login-with-password-core.hbs
+++ b/views/login-with-password-core.hbs
@@ -22,7 +22,7 @@
               redirectUri: '{{redirectUri}}'
             }
         }, function (err) {
-            if (err) logMessage('callback error', err);
+            if (err) console.log(err);
         });
         return false;
     }
