--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,7 @@
 <h3>Core</h3>
 <p><a href="/login-with-password-core">Login with Password</a></p>
 <p><a href="/signup-core">Sign Up</a></p>
+<p><a href="/reset-password-core">Reset Password</a></p>
 
 <h2>Social Login Only</h2>
 
