Add update profile core function

--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,18 +1,10 @@
-<p>
-    Connected as {{name}} - <a href="/logout">Logout</a>
-</p>
-<p>
-  <a href="/profile">
-      Profile Editor
-  </a>
-</p>
-<p>
-  <a href="/email-editor">
-      Email Editor
-  </a>
-</p>
-<p>
-  <a href="/password-editor">
-      Password Editor
-  </a>
-</p>
+<p>Connected as {{name}} - <a href="/logout">Logout</a></p>
+
+<h3>Widget</h3>
+<p><a href="/profile">Profile Editor</a</p>
+<p><a href="/email-editor">Email Editor</a></p>
+<p><a href="/password-editor">Password Editor</a></p>
+
+<h3>Core</h3>
+<p><a href="/update-profile-core">Update Profile</a></p>
+<p><a href="/reset-password-core">Reset Password</a></p>
