--- a/views/update-profile-core.hbs
+++ b/views/update-profile-core.hbs
@@ -13,7 +13,9 @@
         var form = document.getElementById('update-form');
         var formData = new FormData(form);
         reach5('updateProfile', {
+          data: {
             email: formData.get('email')
+          }
         }, function (err) {
             if (err) console.log(err);
         });
