--- a/views/password-editor.hbs
+++ b/views/password-editor.hbs
@@ -10,6 +10,8 @@
 
 <script>
     reach5('showPasswordEditor', {
-        container: 'password-editor'
+        container: 'password-editor',
+        accessToken: '{{accessToken}}',
+        promptOldPassword: true
     });
 </script>
