--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -10,6 +10,7 @@
 
 <script>
     reach5('showProfileEditor', {
+        accessToken: '{{accessToken}}',
         container: 'profile-editor',
         fields: [
             "given_name",
