Add update-email-core and update-password-core

--- a/views/user.hbs
+++ b/views/user.hbs
@@ -7,3 +7,5 @@
 
 <h3>Core</h3>
 <p><a href="/update-profile-core">Update Profile</a></p>
+<p><a href="/update-email-core">Update Email</a></p>
+<p><a href="/update-password-core">Update Password</a></p>
