add onSuccess profileEditor

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -15,6 +15,9 @@
         fields: [
             "given_name",
             "family_name"
-        ]
+        ],
+        onSuccess: function() {
+          window.location = "/user";
+        }
     });
 </script>
