--- a/views/reset-password.hbs
+++ b/views/reset-password.hbs
@@ -1,7 +1,8 @@
-<div id="password-editor"></div>
+<div id="password-reset"></div>
 
 <script>
-    reach5('showPasswordEditor', {
-        container: 'password-editor'
+    reach5('showPasswordReset', {
+        container: 'password-reset',
+        loginLink: '/auth'
     });
 </script>
