Rename all pages

--- a/views/core-password-reset.hbs
+++ b/views/core-password-reset.hbs
@@ -1,6 +1,6 @@
 <form id="reset-form">
     <div>
-        <input type="text" name="email">
+        <input type="text" name="email" placeholder="Email">
     </div>
     <button onclick="login(event)">
         Submit
