--- a/views/core-user-update-profile.hbs
+++ b/views/core-user-update-profile.hbs
@@ -1,6 +1,8 @@
 <form id="update-form">
     <div>
         <input type="text" name="givenName" placeholder="First Name">
+    </div>
+    <div>
         <input type="text" name="familyName" placeholder="Last Name">
     </div>
     <button onclick="login(event)">
