--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,18 +4,18 @@
 <h2>Authentication</h2>
 
 <h3>Widget</h3>
-<p><a href="/auth">Auth</a></p>
-<p><a href="/passwordless">Passwordless</a></p>
+<p><a href="/widget-auth">Auth</a></p>
+<p><a href="/widget-passwordless">Passwordless</a></p>
 
 <h3>Core</h3>
-<p><a href="/login-with-password-core">Login with Password</a></p>
-<p><a href="/signup-core">Sign Up</a></p>
-<p><a href="/reset-password-core">Reset Password</a></p>
+<p><a href="/core-login-with-password">Login with Password</a></p>
+<p><a href="/core-signup">Sign Up</a></p>
+<p><a href="/core-password-reset">Password Reset</a></p>
 
 <h2>Social Login Only</h2>
 
 <h3>Widget</h3>
-<p><a href="/social-login">Social Login</a></p>
+<p><a href="/widget-social-login">Social Login</a></p>
 
 <h3>Core</h3>
-<p><a href="/social-login-core">Social Login Core</a></p>
+<p><a href="/core-social-login">Social Login Core</a></p>
