--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,11 +1,11 @@
 <p>Connected as {{name}} - <a href="/logout">Logout</a></p>
 
 <h3>Widget</h3>
-<p><a href="/profile">Profile Editor</a</p>
-<p><a href="/email-editor">Email Editor</a></p>
-<p><a href="/password-editor">Password Editor</a></p>
+<p><a href="/widget-user-profile-editor">Profile Editor</a</p>
+<p><a href="/widget-user-email-editor">Email Editor</a></p>
+<p><a href="/widget-user-password-editor">Password Editor</a></p>
 
 <h3>Core</h3>
-<p><a href="/update-profile-core">Update Profile</a></p>
-<p><a href="/update-email-core">Update Email</a></p>
-<p><a href="/update-password-core">Update Password</a></p>
+<p><a href="/core-user-update-profile">Update Profile</a></p>
+<p><a href="/core-user-update-email">Update Email</a></p>
+<p><a href="/core-user-update-password">Update Password</a></p>
