--- a/views/widget-user-password-reset.hbs
+++ b/views/widget-user-password-reset.hbs
@@ -3,6 +3,6 @@
 <script>
     reach5('showPasswordReset', {
         container: 'password-reset',
-        loginLink: '/auth'
+        loginLink: '/widget-auth'
     });
 </script>
