--- a/views/core-signup.hbs
+++ b/views/core-signup.hbs
@@ -1,9 +1,9 @@
 <form id="signup-form">
     <div>
-        <input type="text" name="email">
+        <input type="text" name="email" placeholder="Email">
     </div>
     <div>
-        <input type="password" name="password">
+        <input type="password" name="password" placeholder="Password">
     </div>
     <button onclick="signup(event)">
         Submit
