--- a/views/core-user-update-password.hbs
+++ b/views/core-user-update-password.hbs
@@ -1,6 +1,6 @@
 <form id="update-form">
     <div>
-        <input type="text" name="email">
+        <input type="password" name="password" placeholder="Password">
     </div>
     <button onclick="login(event)">
         Submit
@@ -16,12 +16,11 @@
         e.preventDefault();
         var form = document.getElementById('update-form');
         var formData = new FormData(form);
-        reach5('updateEmail', {
+        reach5('updatePassword', {
           accessToken: '{{accessToken}}',
-          email: formData.get('email')
-        }, function (err) {
+          password: formData.get('password')
+        }, function (err, result) {
             if (err) console.log(err);
-            console.log("toto");
         });
         return false;
     }
