Add widget social accounts

--- a/views/user.hbs
+++ b/views/user.hbs
@@ -4,6 +4,7 @@
 <p><a href="/widget-user-profile-editor">Profile Editor</a</p>
 <p><a href="/widget-user-email-editor">Email Editor</a></p>
 <p><a href="/widget-user-password-editor">Password Editor</a></p>
+<p><a href="/widget-user-social-accounts">Social Accounts</a></p>
 
 <h3>Core</h3>
 <p><a href="/core-user-update-profile">Update Profile</a></p>
