Use idTokenHint instead of loginHinet

--- a/views/widget-user-social-accounts.hbs
+++ b/views/widget-user-social-accounts.hbs
@@ -17,7 +17,7 @@
         allowForgotPassword: false,
         auth: {
             prompt: 'login',
-            loginHint: '{{email}}'
+            idTokenHint: '{{idToken}}'
         }
     });
 
