showSocialLogins for passwordless

--- a/views/widget-passwordless.hbs
+++ b/views/widget-passwordless.hbs
@@ -3,6 +3,7 @@
 <script>
     reach5('showPasswordless', {
         container: 'auth-container',
+        showSocialLogins: true,
         auth: {
             redirectUri: '{{redirectUri}}'
         }
