enable sso on core password login page

--- a/views/core-login-with-password.hbs
+++ b/views/core-login-with-password.hbs
@@ -1,4 +1,4 @@
-<form id="login-form">
+<form id="login-form" style="display: none">
     <div>
         <input type="text" name="email" placeholder="Email">
     </div>
@@ -11,19 +11,31 @@
 </form>
 
 <script>
-    function login(e) {
-        e.preventDefault();
-        var form = document.getElementById('login-form');
-        var formData = new FormData(form);
-        reach5('loginWithPassword', {
-            email: formData.get('email'),
-            password: formData.get('password'),
-            auth: {
-              redirectUri: '{{redirectUri}}'
+    (function () {
+        var authOptions = {
+            redirectUri: '{{redirectUri}}',
+        }
+
+        reach5('getSsoData', function (err, session) {
+            if (session.isAuthenticated) {
+                reach5('loginFromSession', authOptions)
+            } else {
+              document.getElementById("login-form").style.display = 'block'
             }
-        }, function (err) {
-            if (err) console.log(err);
-        });
-        return false;
-    }
+        })
+
+        function login(e) {
+            e.preventDefault()
+            var form = document.getElementById('login-form')
+            var formData = new FormData(form)
+            reach5('loginWithPassword', {
+                email: formData.get('email'),
+                password: formData.get('password'),
+                auth: authOptions,
+            }, function (err) {
+                if (err) console.log(err)
+            })
+            return false
+        }
+    })()
 </script>
