--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,7 @@
 
 <h3>Core</h3>
 <p><a href="/core-login-with-password">Login with Password</a></p>
+<p><a href="/core-login-with-password-sso">SSO Login with Password</a></p>
 <p><a href="/core-signup">Sign Up</a></p>
 <p><a href="/core-password-reset">Password Reset</a></p>
 
