--- a/views/widget-user-email-editor.hbs
+++ b/views/widget-user-email-editor.hbs
@@ -10,6 +10,7 @@
 
 <script>
     reach5('showEmailEditor', {
-        container: 'email-editor'
+        container: 'email-editor',
+        accessToken: '{{accessToken}}'
     });
 </script>
