feat: change to npm sdk

--- a/views/core-login-with-password-sso.hbs
+++ b/views/core-login-with-password-sso.hbs
@@ -1,11 +1,11 @@
-<form id="login-form" style="display: none">
+<form id="login-form" onsubmit="login(event)" style="display:none">
     <div>
         <input type="text" name="email" placeholder="Email">
     </div>
     <div>
         <input type="password" name="password" placeholder="Password">
     </div>
-    <button onclick="login(event)">
+    <button>
         Submit
     </button>
 </form>
@@ -16,26 +16,32 @@
       redirectUri: '{{redirectUri}}',
   }
 
-  reach5('getSsoData', function (err, session) {
-      if (session.isAuthenticated) {
-          reach5('loginFromSession', authOptions)
-      } else {
-        document.getElementById("login-form").style.display = 'block'
-      }
-    })
-
-    function login(e) {
-        e.preventDefault()
-        var form = document.getElementById('login-form')
-        var formData = new FormData(form)
-        reach5('loginWithPassword', {
-            email: formData.get('email'),
-            password: formData.get('password'),
-            auth: authOptions,
-        }, function (err) {
-            if (err) console.log(err)
-        })
-        return false
+  client.getSessionInfo().then(result => {
+    if (result.isAuthenticated) {
+      client.loginFromSession(authOptions)
+    } else {
+      document.getElementById("login-form").style.display = 'block'
     }
+  });
+
+  function login(e) {
+      e.preventDefault();
+
+      var form = document.getElementById('login-form');
+      var formData = new FormData(form);
+
+      client.loginWithPassword({
+          email: formData.get('email'),
+          password: formData.get('password'),
+          auth: {
+            redirectUri: '{{redirectUri}}'
+          }
+      })
+      .then(console.log)
+      .catch(console.log)
+
+      return false;
+  }
+
 })()
 </script>
