--- a/views/core-login-with-password.hbs
+++ b/views/core-login-with-password.hbs
@@ -1,11 +1,11 @@
-<form id="login-form">
+<form id="login-form" onsubmit="login(event)">
     <div>
         <input type="text" name="email" placeholder="Email">
     </div>
     <div>
         <input type="password" name="password" placeholder="Password">
     </div>
-    <button onclick="login(event)">
+    <button>
         Submit
     </button>
 </form>
@@ -13,17 +13,20 @@
 <script>
     function login(e) {
         e.preventDefault();
+
         var form = document.getElementById('login-form');
         var formData = new FormData(form);
-        reach5('loginWithPassword', {
+
+        client.loginWithPassword({
             email: formData.get('email'),
             password: formData.get('password'),
             auth: {
               redirectUri: '{{redirectUri}}'
             }
-        }, function (err) {
-            if (err) console.log(err);
-        });
+        })
+        .then(console.log)
+        .catch(console.log)
+        
         return false;
     }
 </script>
