--- a/views/core-password-reset.hbs
+++ b/views/core-password-reset.hbs
@@ -1,8 +1,8 @@
-<form id="reset-form">
+<form id="reset-form" onsubmit="login(event)">
     <div>
         <input type="text" name="email" placeholder="Email">
     </div>
-    <button onclick="login(event)">
+    <button>
         Submit
     </button>
 </form>
@@ -10,13 +10,16 @@
 <script>
     function login(e) {
         e.preventDefault();
+
         var form = document.getElementById('reset-form');
         var formData = new FormData(form);
-        reach5('requestPasswordReset', {
-            email: formData.get('email')
-        }, function (err) {
-            if (err) console.log(err);
-        });
+
+        client.requestPasswordReset({
+          email: formData.get('email')
+        })
+        .then(console.log)
+        .catch(console.log)
+        
         return false;
     }
 </script>
