--- a/views/core-user-update-password.hbs
+++ b/views/core-user-update-password.hbs
@@ -1,8 +1,8 @@
-<form id="update-form">
+<form id="update-form" onsubmit="update(event)">
     <div>
         <input type="password" name="password" placeholder="Password">
     </div>
-    <button onclick="login(event)">
+    <button>
         Submit
     </button>
 </form>
@@ -12,16 +12,19 @@
 </p>
 
 <script>
-    function login(e) {
+    function update(e) {
         e.preventDefault();
+
         var form = document.getElementById('update-form');
         var formData = new FormData(form);
-        reach5('updatePassword', {
+
+        client.updatePassword({
           accessToken: '{{accessToken}}',
           password: formData.get('password')
-        }, function (err, result) {
-            if (err) console.log(err);
-        });
+        })
+        .then(console.log)
+        .catch(console.log)
+
         return false;
     }
 </script>
