Implement a page for login with a phone number

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,8 @@
 <p><a href="/widget-passwordless">Passwordless</a></p>
 
 <h3>Core</h3>
-<p><a href="/core-login-with-password">Login with Password</a></p>
+<p><a href="/core-login-with-email-password">Login with Email and Password</a></p>
+<p><a href="/core-login-with-phone-password">Login with Phone number and Password</a></p>
 <p><a href="/core-login-with-password-sso">SSO Login with Password</a></p>
 <p><a href="/core-signup">Sign Up</a></p>
 <p><a href="/core-password-reset">Password Reset</a></p>
