--- a/views/core-login-with-phone-password.hbs
+++ b/views/core-login-with-phone-password.hbs
@@ -1,22 +1,22 @@
-<form id="login-form">
+<form id="login-phone-form">
     <div>
-        <input type="text" name="email" placeholder="Email">
+        <input type="text" name="phone_number" placeholder="Phone number">
     </div>
     <div>
         <input type="password" name="password" placeholder="Password">
     </div>
-    <button onclick="login(event)">
+    <button onclick="loginWithPhoneNumber(event)">
         Submit
     </button>
 </form>
 
 <script>
-    function login(e) {
+    function loginWithPhoneNumber(e) {
         e.preventDefault();
-        var form = document.getElementById('login-form');
+        var form = document.getElementById('login-phone-form');
         var formData = new FormData(form);
         reach5('loginWithPassword', {
-            email: formData.get('email'),
+            phone_number: formData.get('phone_number'),
             password: formData.get('password'),
             auth: {
               redirectUri: '{{redirectUri}}'
