--- a/views/core-login-with-email-password.hbs
+++ b/views/core-login-with-email-password.hbs
@@ -1,4 +1,4 @@
-<form id="login-form" onsubmit="login(event)">
+<form id="login-email-form" onsubmit="loginWithEmail(event)">
     <div>
         <input type="text" name="email" placeholder="Email">
     </div>
@@ -11,10 +11,10 @@
 </form>
 
 <script>
-    function login(e) {
+    function loginWithEmail(e) {
         e.preventDefault();
 
-        var form = document.getElementById('login-form');
+        var form = document.getElementById('login-email-form');
         var formData = new FormData(form);
 
         client.loginWithPassword({
