--- a/views/widget-auth.hbs
+++ b/views/widget-auth.hbs
@@ -4,7 +4,8 @@
     reach5('showAuth', {
         container: 'auth-container',
         auth: {
-            redirectUri: '{{redirectUri}}'
-        }
+            redirectUri: '{{redirectUri}}',
+        },
+        signupFields: ['email','password']
     });
 </script>
