--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,8 +11,10 @@
 <p><a href="/core-login-with-email-password">Login with Email and Password</a></p>
 <p><a href="/core-login-with-phone-password">Login with Phone number and Password</a></p>
 <p><a href="/core-login-with-password-sso">SSO Login with Password</a></p>
+<p><a href="/core-passwordless">Login with Passwordless</a></p>
 <p><a href="/core-signup">Sign Up</a></p>
 <p><a href="/core-password-reset">Password Reset</a></p>
+<p><a href="/core-custom-token">Custom Token</a></p>
 
 <h2>Social Login Only</h2>
 
